--- a/package.json
+++ b/package.json
@@ -23,8 +23,15 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
+    "mysql": "^2.15.0",
+    "ngx-progressbar": "^2.1.1",
+    "ngx-webstorage": "^2.0.1",
+    "nodemon": "^1.17.5",
     "path": "^0.12.7",
     "rxjs": "^5.5.2",
     "typescript": "~2.4.2",
