--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.0.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "moment": "^2.22.2",
